# EvalOps-Lite

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: settings.py
scripts/: evaluate.py  serve.py  train.py
src/: init.py
src/api/: app.py  dependencies.py  init.py  schemas.py
src/api/routers/: metrics.py  predict.py
src/core/: model_registry.py
src/data/: ingestion.py  init.py  schemas.py
src/evaluation/: comparator.py  evaluator.py  init.py  metrics.py  safety.py
src/models/: genai_baseline.py  init.py  ml_model.py  registry.py
src/preprocessing/: init.py  pipeline.py  transformers.py
src/utils/: logging.py  serialization.py
tests/: conftest.py  init.py  test_api.py  test_data_ingestion.py  test_evaluation.py  test_genai_baseline.py  test_ml_model.py  test_preprocessing.py  test_safety.py
